@@ -22,16 +22,19 @@ our @PRELOAD = qw/Index Path Regex/;
 # Postload these action types
 our @POSTLOAD = qw/Default/;
 
-has _tree => (is => 'rw');
-has _dispatch_types => (is => 'rw', default => sub { [] }, required => 1, lazy => 1);
-has _registered_dispatch_types => (is => 'rw', default => sub { {} }, required => 1, lazy => 1);
-has _method_action_class => (is => 'rw', default => 'Catalyst::Action');
-has _action_container_class => (is => 'rw', default => 'Catalyst::ActionContainer');
+# FIXME - All of these should be _private attributes, and should have public accessors
+#         which warn about back-compat if you use them.
+has tree => (is => 'rw');
+has dispatch_types => (is => 'rw', default => sub { [] }, required => 1, lazy => 1);
+has registered_dispatch_types => (is => 'rw', default => sub { {} }, required => 1, lazy => 1);
+has method_action_class => (is => 'rw', default => 'Catalyst::Action');
+has action_container_class => (is => 'rw', default => 'Catalyst::ActionContainer');
+has action_hash => (is => 'rw', required => 1, lazy => 1, default => sub { {} });
+has container_hash => (is => 'rw', required => 1, lazy => 1, default => sub { {} });
+# END FIXME
 
 has preload_dispatch_types => (is => 'rw', required => 1, lazy => 1, default => sub { [@PRELOAD] });
 has postload_dispatch_types => (is => 'rw', required => 1, lazy => 1, default => sub { [@POSTLOAD] });
-has _action_hash => (is => 'rw', required => 1, lazy => 1, default => sub { {} });
-has _container_hash => (is => 'rw', required => 1, lazy => 1, default => sub { {} });
 
 # Wrap accessors so you can assign a list and it will capture a list ref.
 around qw/preload_dispatch_types postload_dispatch_types/ => sub {
@@ -70,7 +73,7 @@ sub BUILD {
   my $container =
     Catalyst::ActionContainer->new( { part => '/', actions => {} } );
 
-  $self->_tree( Tree::Simple->new( $container, Tree::Simple->ROOT ) );
+  $self->tree( Tree::Simple->new( $container, Tree::Simple->ROOT ) );
 }
 
 =head2 $self->preload_dispatch_types
@@ -316,7 +319,7 @@ sub _invoke_as_component {
     my $class = $self->_find_component_class( $c, $component ) || return 0;
 
     if ( my $code = $class->can($method) ) {
-        return $self->_method_action_class->new(
+        return $self->method_action_class->new(
             {
                 name      => $method,
                 code      => $code,
@@ -362,7 +365,7 @@ sub prepare_action {
         # Check out dispatch types to see if any will handle the path at
         # this level
 
-        foreach my $type ( @{ $self->_dispatch_types } ) {
+        foreach my $type ( @{ $self->dispatch_types } ) {
             last DESCEND if $type->match( $c, $path );
         }
 
@@ -393,7 +396,7 @@ sub get_action {
 
     $namespace = join( "/", grep { length } split '/', ( defined $namespace ? $namespace : "" ) );
 
-    return $self->_action_hash->{"${namespace}/${name}"};
+    return $self->action_hash->{"${namespace}/${name}"};
 }
 
 =head2 $self->get_action_by_path( $path ); 
@@ -406,7 +409,7 @@ sub get_action_by_path {
     my ( $self, $path ) = @_;
     $path =~ s/^\///;
     $path = "/$path" unless $path =~ /\//;
-    $self->_action_hash->{$path};
+    $self->action_hash->{$path};
 }
 
 =head2 $self->get_actions( $c, $action, $namespace )
@@ -439,11 +442,11 @@ sub get_containers {
 
     if ( length $namespace ) {
         do {
-            push @containers, $self->_container_hash->{$namespace};
+            push @containers, $self->container_hash->{$namespace};
         } while ( $namespace =~ s#/[^/]+$## );
     }
 
-    return reverse grep { defined } @containers, $self->_container_hash->{''};
+    return reverse grep { defined } @containers, $self->container_hash->{''};
 
     #return (split '/', $namespace); # isnt this more clear?
     my @parts = split '/', $namespace;
@@ -463,7 +466,7 @@ cannot determine an appropriate URI, this method will return undef.
 sub uri_for_action {
     my ( $self, $action, $captures) = @_;
     $captures ||= [];
-    foreach my $dispatch_type ( @{ $self->_dispatch_types } ) {
+    foreach my $dispatch_type ( @{ $self->dispatch_types } ) {
         my $uri = $dispatch_type->uri_for_action( $action, $captures );
         return( $uri eq '' ? '/' : $uri )
             if defined($uri);
@@ -482,7 +485,7 @@ single action.
 sub expand_action {
     my ($self, $action) = @_;
 
-    foreach my $dispatch_type (@{ $self->_dispatch_types }) {
+    foreach my $dispatch_type (@{ $self->dispatch_types }) {
         my $expanded = $dispatch_type->expand_action($action);
         return $expanded if $expanded;
     }
@@ -501,7 +504,7 @@ Also, set up the tree with the action containers.
 sub register {
     my ( $self, $c, $action ) = @_;
 
-    my $registered = $self->_registered_dispatch_types;
+    my $registered = $self->registered_dispatch_types;
 
     #my $priv = 0; #seems to be unused
     foreach my $key ( keys %{ $action->attributes } ) {
@@ -510,13 +513,13 @@ sub register {
         unless ( $registered->{$class} ) {
             #some error checking rethrowing here wouldn't hurt.
             eval { Class::MOP::load_class($class) };
-            push( @{ $self->_dispatch_types }, $class->new ) unless $@;
+            push( @{ $self->dispatch_types }, $class->new ) unless $@;
             $registered->{$class} = 1;
         }
     }
 
     # Pass the action to our dispatch types so they can register it if reqd.
-    foreach my $type ( @{ $self->_dispatch_types } ) {
+    foreach my $type ( @{ $self->dispatch_types } ) {
         $type->register( $c, $action );
     }
 
@@ -528,14 +531,14 @@ sub register {
     # Set the method value
     $container->add_action($action);
 
-    $self->_action_hash->{"$namespace/$name"} = $action;
-    $self->_container_hash->{$namespace} = $container;
+    $self->action_hash->{"$namespace/$name"} = $action;
+    $self->container_hash->{$namespace} = $container;
 }
 
 sub _find_or_create_action_container {
     my ( $self, $namespace ) = @_;
 
-    my $tree ||= $self->_tree;
+    my $tree ||= $self->tree;
 
     return $tree->getNodeValue unless $namespace;
 
@@ -571,7 +574,7 @@ sub setup_actions {
 
     my @classes =
       $self->_load_dispatch_types( @{ $self->preload_dispatch_types } );
-    @{ $self->_registered_dispatch_types }{@classes} = (1) x @classes;
+    @{ $self->registered_dispatch_types }{@classes} = (1) x @classes;
 
     foreach my $comp ( values %{ $c->components } ) {
         $comp->register_actions($c) if $comp->can('register_actions');
@@ -606,12 +609,12 @@ sub setup_actions {
         $walker->( $walker, $_, $prefix ) for $parent->getAllChildren;
     };
 
-    $walker->( $walker, $self->_tree, '' );
+    $walker->( $walker, $self->tree, '' );
     $c->log->debug( "Loaded Private actions:\n" . $privates->draw . "\n" )
       if $has_private;
 
     # List all public actions
-    $_->list($c) for @{ $self->_dispatch_types };
+    $_->list($c) for @{ $self->dispatch_types };
 }
 
 sub _load_dispatch_types {
@@ -627,7 +630,7 @@ sub _load_dispatch_types {
         eval { Class::MOP::load_class($class) };
         Catalyst::Exception->throw( message => qq/Couldn't load "$class"/ )
           if $@;
-        push @{ $self->_dispatch_types }, $class->new;
+        push @{ $self->dispatch_types }, $class->new;
 
         push @loaded, $class;
     }
