@@ -1,5 +1,8 @@
 # This file documents the revision history for Perl extension Catalyst.
 
+        - Rename attributes on Catalyst::Dispatcher back to be public
+          to work correctly with Catalyst::Plugin::Server and 
+          Catalyst::Plugin::Authorization::ACL (t0m)
         - Fix return value of $c->req->body, which delegates to the body
           method on the HTTP::Body of the request (t0m)
           - Test for this (t0m)
